changed jnlptemplate to enable overriding of parameters, using custom time instead of libgdx one to test tearing

--- a/magick-desktop/src/main/jnlp/jnlptemplate.vm
+++ b/magick-desktop/src/main/jnlp/jnlptemplate.vm
@@ -53,9 +53,9 @@
 	</resources>
   
     <applet-desc name="$project.Description" main-class="$mainClass" width="800" height="600"> <!-- JNLPAPPLET -->
-    	<param name="game" value="$project.Properties.appletGameParameter"/> <!-- JNLPAPPLET -->
+    	<param name="game" value="$appletGameParameter"/> <!-- JNLPAPPLET -->
   	</applet-desc> <!-- JNLPAPPLET -->
   	
-  	<application-desc main-class="$project.Properties.webstartMain" /> <!-- JNLPWEBSTART -->  
+  	<application-desc main-class="$webstartMain" /> <!-- JNLPWEBSTART -->  
   
 </jnlp>
